--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,13 @@
 <html>
 <body>
+<a href="/">All</a>
+<a href="/?genre=adventure">Adventure</a>
+<a href="/?genre=rpg">RPG</a>
+<a href="/?genre=strategy">Strategy</a>
+<a href="/?genre=shooter">Shooter</a>
+
+<br><br>
+
 <form action="/add-game" method="post">
     <input type="text" placeholder="Name" name="gameName"/>
     <select name="gameGenre">
@@ -22,7 +30,7 @@
 
 <ol>
     {{#games}}
-    <li>{{name}} {{platform}} {{releaseYear}}</li>
+    <li>{{name}} {{platform}} {{genre}} {{releaseYear}}</li>
     {{/games}}
 </ol>
 </body>
