--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,8 @@
 <a href="/?genre=rpg">RPG</a>
 <a href="/?genre=strategy">Strategy</a>
 <a href="/?genre=shooter">Shooter</a>
+<br>
+
 
 <br><br>
 
@@ -20,9 +22,9 @@
     <select name="gamePlatform">
         <option selected disabled>Platform</option>
         <option value="pc">PC</option>
-        <option value="ps4">PS4</option>
-        <option value="xbone">XBox One</option>
-        <option value="wiiu">Wii U</option>
+        <option value="playstation">Playstation</option>
+        <option value="xbox">Xbox</option>
+        <option value="wiiu">Wii u</option>
     </select>
     <input type="number" placeholder="Release Year" name="gameYear"/>
     <button type="submit">Add Game</button>
