--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,10 +6,11 @@
 <a href="/?genre=strategy">Strategy</a>
 <a href="/?genre=shooter">Shooter</a>
 <br>
-
-
-<br><br>
-
+<form action="/" method="get">
+    <input type="text" placeholder="Search" name="search"/>
+    <button type="submit">Search</button>
+</form>
+<br>
 <form action="/add-game" method="post">
     <input type="text" placeholder="Name" name="gameName"/>
     <select name="gameGenre">
