--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,10 @@
     <input type="text" placeholder="Search" name="search"/>
     <button type="submit">Search</button>
 </form>
+<form action="/" method="get">
+    <input type="text" placeholder="Search By Year" name="searchYear"/>
+    <button type="submit">Search By Release Year</button>
+</form>
 <br>
 <form action="/add-game" method="post">
     <input type="text" placeholder="Name" name="gameName"/>
