--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,19 @@
 <html>
 <body>
+{{^user}}
+<form action="/login" method="post">
+    <input type="text" placeholder="Username" name="userName" required/>
+    <input type="password" placeholder="Password" name="password" required/>
+    <button type="submit">Login</button>
+</form>
+{{/user}}
+{{#user}}
+Welcome, {{name}}!
+<form action="/logout" method="post">
+    <button type="submit">Logout</button>
+</form>
+<br><br>
+
 <a href="/">All</a>
 <a href="/?genre=adventure">Adventure</a>
 <a href="/?genre=rpg">RPG</a>
@@ -40,5 +54,6 @@
     <li>{{name}} {{platform}} {{genre}} {{releaseYear}}</li>
     {{/games}}
 </ol>
+{{/user}}
 </body>
 </html>
